<resources>
    <string name="app_name">GMIT - Energy Lab</string>
    <string name="home_activity">GMIT - Welcome to the Energy Lab</string>
    <string name="launcher_activity">GMIT - Launcher</string>
    <string name="solar_activity">GMIT - Solar Panels</string>
    <string name="solar_overview_activity">GMIT - Solar Panels Overview</string>
    <string name="heatpump_activity">GMIT - Heat Pump</string>
    <string name="heatpumpoverview_activity">GMIT - Heat Pump Overview</string>
    <string name="heatpump_costefficiency_acitivy">GMIT - Heat Pump Cost Efficiency</string>
    <string name="biomass_activity">GMIT - Biomass Boiler</string>
    <string name="Woodgasification_activity">GMIT - Wood Gasification Overview</string>
    <string name="Woodpellet_activity">GMIT - Wood Pellet Overview</string>
    <string name="gasboiler_activity">GMIT - Condensing Gas Boiler</string>
    <string name="gasboiler_overveiw_activity">GMIT - Gas Boiler Overview</string>
    <string name="heattransfer_activity">GMIT - Heat Transfer</string>
    <string name="radiatorsystem_activity">GMIT - Radiator Systems Overview</string>
    <string name="underfloor_activity">GMIT - Underfloor Heating Systems Overview</string>
    <string name="about_activity">About the GMIT Energy lab</string>
    <string name="preference_activity">GMIT - Preferences</string>
    <string name="webview_activity">GMIT - The Department of Mechanical &amp; Industrial Engineering</string>
    <string name="menuSolar">Solar Panels</string>
    <string name="menuHeatPump">Heat Pump</string>
    <string name="menuBiomass">Biomass Boiler</string>
    <string name="menuGasBoiler">Gas Boiler</string>
    <string name="menuHeatTransfer">Heat Transfer</string>
    <string name="menuHome">Home</string>
    <string name="menuAbout">About</string>
    <string name="menuPreference">Preferences</string>
    <string name="menuQuit">Quit</string>
    <string name="homeText">This app provides an introduction to the renewable energy technologies available in the Energy Lab in the Mechanical Engineering Department in GMIT. You can visit the lab and interact with state-of-the-art energy technology and/or you can find out more about the Department and what we can offer to our students.</string>
    <string name="btnHomeOne">Mechanical Engineering Department in GMIT</string>
    <string name="btnHomeTwo">Energy Lab</string>
    <string name="solartxt">Solar Panels</string>
    <string name="heatpumptxt">Heat Pump</string>
    <string name="biomasstxt">Biomass Boiler</string>
    <string name="gasboilertxt">Gas Boiler</string>
    <string name="heattransfertxt">Heat Transfer</string>
    <string name="abouttxt">About</string>
    <string name="solarLevel2Text">Solar panels transfer the sun’s energy, which is in the form of electromagnetic radiation, into thermal energy to heat water for domestic and industrial purposes.</string>
    <string name="btnSolarOne">See video of solar panel</string>
    <string name="btnSolarTwo">System overview</string>
    <string name="solarTitlePin1">Inlet temperature</string>
    <string name="solarTitlePin2">Outlet temperature</string>
    <string name="solarTitlePin3">Solar thermal flat plate</string>
    <string name="solarTitlePin4">System controller + pump</string>
    <string name="solarTitlePin5">Expansion vessel</string>
    <string name="solarTitlePin6">Pressure gauge</string>
    <string name="solarTitlePin7">Solar return temperature</string>
    <string name="solarTitlePin8">Solar flow temperature</string>
    <string name="solarTitlePin9">Hot water storage tank</string>
    <string name="solarTitlePin10">Solar radiation</string>
    <string name="solarMessagePin1">The inlet temperature sensor measures the temperature of the incoming (cold) water to the collector. It is only needed during testing and is not a standard part of a domestic solar thermal system.</string>
    <string name="solarMessagePin2">The outlet temperature sensor measures the temperature of the outgoing (heated) water from the collector.  When the outgoing water temperature reaches a set temperature compared with that pre-set at the top of the storage tank, the circulation pump is activated. When the temperature difference goes below a pre-set value, the pump de-activates.</string>
    <string name="solarMessagePin3">The best place to put a solar thermal collector is on a south-facing roof. This is where it will get most sun. The solar panels act like a window.  They let in the sun’s energy and it is taken up by the solar thermal system. The typical domestic home uses either flat plate or evacuated tube collectors. The diagram presents the flat plate collector in GMIT Energy lab.</string>
    <string name="solarMessagePin4">The system controller turns on/off the circulating pump, based on the reading from the solar collector outlet temperature.</string>
    <string name="solarMessagePin5">The expansion tank allows the water in the system to expand due to water temperature rise.</string>
    <string name="solarMessagePin6">The pressure gauge shows the pressure of the fluid in the pipes of the solar collector system.</string>
    <string name="solarMessagePin7">This is the temperature of the water coming from the coil in the multi-energy tank. The hot water in the pipe coming from the solar panels is transferred from the inlet pipe to heat the water in the tank.</string>
    <string name="solarMessagePin8">This is the temperature of the water coming from the solar panel minus the temperature losses occurring in the pipework between the solar panel and the tank. To reduce these losses, use ‘class 0’ high temperature insulation.</string>
    <string name="solarMessagePin9">The basic solar thermal system has a dual coil cylinder as the storage tank. A dual coil cylinder basically has two coils: a coil for the solar thermal system and a coil for the auxiliary heating system. The circulating pump for the solar system sends the hot water from the solar panels through the lower coil.  The heat from the solar collector is transferred into the tank, ready for use. On a dull day, when there is not much sun,  the second coil is used to heat the tank, via an auxiliary heating system, typically an oil, gas or biomass fuelled boiler.</string>
    <string name="solarMessagePin10">The sun provides energy in the form of electromagnetic radiation. The average direct solar radiation in Ireland is 2.6kWh/m2/day, which is quite good considering the large number of cloudy, overcast days. Solar panels can provide on average 60\u0025 of domestic hot water in winter and usually 100\u0025 in summer.</string>
    <string name="heatpumpLevel2Text">An air source heat pump extracts heat from the surrounding air.  A fan draws the air over a heat exchanger coil known as an Evaporator.  The coil is filled with a cold refrigerant liquid. As the air flows over this coil, the cool liquid inside the coil draws heat from the air, and begins to heat up. This heat is later passed into a hot water storage tank located within the building, via a second heat exchanger known as a Condenser.</string>
    <string name="btnHeatOne">See video of heat pump</string>
    <string name="btnHeatTwo">System overview and operation</string>
    <string name="btnHeatThree">Efficiency and cost of ownership</string>
    <string name="heatpumpTitlePin1">Ambient air</string>
    <string name="heatpumpTitlePin2">Evaporator</string>
    <string name="heatpumpTitlePin3">Compressor</string>
    <string name="heatpumpTitlePin4">Condenser</string>
    <string name="heatpumpTitlePin5">Receiver vessel</string>
    <string name="heatpumpTitlePin6">Throttle valve (expansion valve)</string>
    <string name="heatpumpTitlePin7">Heat/cool mode switch</string>
    <string name="heatpumpTitlePin8">Hot water flow</string>
    <string name="heatpumpTitlePin9">Cold return flow</string>
    <string name="heatpumpTitlePin10">Multi-energy tank</string>
    <string name="heatpumpMessagePin1">The air outside the building. The heat pump in the GMIT Energy Lab draws heat energy from a large volume of air outside and transforms it into a lower volume of hot water inside.</string>
    <string name="heatpumpMessagePin2">The evaporator uses a fan to draw air from the surroundings over tubes containing refrigerant.  Since the air is warmer than the refrigerant in the tubes, heat is transferred from the ‘warm’ air (even at or below 0oC) to the colder refrigerant. This causes the cold refrigerant liquid to evaporate, and turn into a gas.</string>
    <string name="heatpumpMessagePin3">The compressor, driven by an electric motor, acts like a pump, pushing the refrigerant about the circuit. It also increases both the temperature and pressure of the refrigerant vapour.</string>
    <string name="heatpumpMessagePin4">The hot vapour from the compressor now enters the condenser and, as it condenses from a vapour to a liquid, gives off heat to the water from the water storage tank. The heated water flows back into the multi-energy tank where it is stored for domestic use.</string>
    <string name="heatpumpMessagePin5">Receiver tank for temporary storage of the refrigerant.</string>
    <string name="cost_House_surface">House surface:</string>
    <string name="cost_Heat_load">Heat load (heating only):</string>
    <string name="cost_Heat_load_2">Heat load (domestic hot water):</string>
    <string name="cost_Heat_pump">Heat pump initial investment:</string>
    <string name="cost_Boiler">Boiler initial investment:</string>
    <string name="cost_Electricity_day">Electricity day rate:</string>
    <string name="cost_Electricity_night">Electricity night rate:</string>
    <string name="cost_Oil">Oil energy cost:</string>
    <string name="cost_life_span">Life span:</string>
    <string name="cost_m2">m2</string>
    <string name="cost_watt">Watt/m2</string>
    <string name="cost_kWh">kWh</string>
    <string name="cost_euro">€</string>
    <string name="cost_euro_kwh">€/kWh</string>
    <string name="cost_years">years</string>
    <string name="biomassLevel2Text">Biomass is a term used to identify fuels used in the renewable energy sector. These fuels include agricultural residues, energy crops and wood based crops.\n\nA wood pellet boiler (see left image from the GMIT Energy Lab) is fired on biological material (wood pellets) and is used to heat water. A gasification boiler (see right image from the GMIT Energy Lab) uses a syngas which is generated through the chemical reaction of burning wood and is also used to heat water.</string>
    <string name="btnBiomassOne">See video of biomass boiler</string>
    <string name="btnBiomassTwo">Wood gasification</string>
    <string name="btnBiomassThree">Wood pellet</string>
    <string name="heattransferLevel2Text">The radiator system and the underfloor heating systems represent an excellent example of heat transfer. Heat transfer can occur through conduction, convection and radiation. All three systems are represented in the GMIT Energy lab. Heat transfer only occurs when there is a temperature gradient, i.e. heat energy flows from a high temperature region to a low temperature region.</string>
    <string name="btnHeatTransferOne">See video of heat transfer</string>
    <string name="btnHeatTransferTwo">Radiator system</string>
    <string name="btnHeatTransferThree">Underfloor heating system</string>
    <string name="GeneralPreferences">Display</string>
    <string name="Fullscreen">Hide notification bar</string>
    <string name="Fullscreen_summary">Hides the notification bar from view</string>
    <string name="GmitEnergy">Information</string>
    <string name="GmitEnergyTitle">GMIT Energy Lab v1.0</string>
    <string name="GmitEnergySummary">License GPL v3 - 2011 - Carles Sentis</string>
</resources>