<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
    
    <LinearLayout 
		android:orientation="horizontal" 
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent">
		    
		<LinearLayout 
			android:orientation="vertical" 
		    android:layout_width="wrap_content" 
		    android:layout_height="fill_parent">
			    
		    <TextView 
		    	style="@style/TextCost"
		    	android:text="@string/cost_House_surface"/>
		    
		    <TextView 
		    	style="@style/TextCost"
		    	android:text="@string/cost_Heat_load"/>
		    	
		   	<TextView 
		   		style="@style/TextCost"
		    	android:text="@string/cost_Heat_load_2"/>
		    	
		   	<TextView 
		    	style="@style/TextCost"
		    	android:text="@string/cost_Heat_pump"/>
		    	
	    	<TextView 
		   		style="@style/TextCost"
		    	android:text="@string/cost_Boiler"/>
		    	
		   	<TextView 
		   		style="@style/TextCost"
		    	android:text="@string/cost_Electricity_day"/>
		    	
		   	<TextView 
		   		style="@style/TextCost"
		    	android:text="@string/cost_Electricity_night"/>
		    	
		   	<TextView 
		   		style="@style/TextCost"
		    	android:text="@string/cost_Oil"/>
		    	
		    <TextView 
		    	style="@style/TextCost"
		    	android:text="@string/cost_life_span" />
		    	
	   	</LinearLayout>
	   	
	   	<LinearLayout 
			android:orientation="vertical" 
		    android:layout_width="wrap_content" 
		    android:layout_height="fill_parent"
		    android:layout_weight="1">
			    	
		    <EditText 
		    	android:layout_width="fill_parent" 
		    	android:layout_height="wrap_content" />
		    	
		    <EditText 
		    	android:layout_width="fill_parent" 
		    	android:layout_height="wrap_content" />
		    	
		    <EditText 
		    	android:layout_width="fill_parent" 
		    	android:layout_height="wrap_content" />
		    	
		    <EditText 
		    	android:layout_width="fill_parent" 
		    	android:layout_height="wrap_content" />
		    	
		    <EditText 
		    	android:layout_width="fill_parent" 
		    	android:layout_height="wrap_content" />
		    	
		    <EditText 
		    	android:layout_width="fill_parent" 
		    	android:layout_height="wrap_content" />
		    	
		    <EditText 
		    	android:layout_width="fill_parent" 
		    	android:layout_height="wrap_content" />
		    
		    <EditText 
		    	android:layout_width="fill_parent" 
		    	android:layout_height="wrap_content" />
		    
		    <EditText 
		    	android:layout_width="fill_parent" 
		    	android:layout_height="wrap_content" />
		</LinearLayout>
		
		<LinearLayout 
			android:orientation="vertical" 
		    android:layout_width="wrap_content" 
		    android:layout_height="fill_parent">
		    
		    <TextView 
		    	style="@style/TextCost"
		    	android:text="@string/cost_m2"/>
			    	
			 <TextView 
		    	style="@style/TextCost"
		    	android:text="@string/cost_watt"/>
			
			 <TextView 
		    	style="@style/TextCost"
		    	android:text="@string/cost_kWh"/>
		    	
		     <TextView 
		    	style="@style/TextCost"
		    	android:text="@string/cost_euro"/>
		    	
		     <TextView 
		    	style="@style/TextCost"
		    	android:text="@string/cost_euro"/>
		    	
		     <TextView 
		    	style="@style/TextCost"
		    	android:text="@string/cost_euro_kwh"/>
		    	
		     <TextView 
		    	style="@style/TextCost"
		    	android:text="@string/cost_euro_kwh"/>
		    	
		     <TextView 
		    	style="@style/TextCost"
		    	android:text="@string/cost_euro_kwh"/>
		    	
		    <TextView 
		    	style="@style/TextCost"
		    	android:text="@string/cost_years"/>
		    	
		</LinearLayout>
	</LinearLayout>
</ScrollView>