<?xml version="1.0" encoding="utf-8"?>

<!-- 
		GMIT - Energy app
		Copyright (C) Carles Sentis 2011 <carlesentis@gmail.com>
		
		GMIT - Energy app is free software: you can
		redistribute it and/or modify it under the terms
		of the GNU General Public License as published by
		the Free Software Foundation, either version 3 of
		the License, or (at your option) any later
		version.
		
		GMIT - Energy app is distributed in the hope that it
		will be useful, but WITHOUT ANY WARRANTY; without
		even the implied warranty of MERCHANTABILITY or
		FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details.
		
		You should have received a copy of the GNU
		General Public License along with this program.
		If not, see <http://www.gnu.org/licenses/>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item 
    	android:id="@+id/itemSolar" 
    	android:title="@string/menuSolar"
    	android:icon="@drawable/solar_bw" />
    <item 
    	android:id="@+id/itemHeatPump" 
    	android:title="@string/menuHeatPump" 
    	android:icon="@drawable/heatpump_bw" />
    <item 
    	android:id="@+id/itemBiomass" 
    	android:title="@string/menuBiomass"
    	android:icon="@drawable/biomassboiler_bw" />
    <item 
    	android:id="@+id/itemGasBoiler" 
    	android:title="@string/menuGasBoiler"
    	android:icon="@drawable/gas_boiler_bw" />
    <item 
    	android:id="@+id/itemHeatTransfer" 
    	android:title="@string/menuHeatTransfer"
    	android:icon="@drawable/heat_transfer_bw" />
    <item 
    	android:id="@+id/itemHome" 
    	android:title="@string/menuHome"
    	android:icon="@android:drawable/ic_menu_close_clear_cancel" />
    
    <item 
    	android:id="@+id/itemPreference"
    	android:title="@string/menuPreference"
    	android:icon="@android:drawable/ic_menu_preferences" />
    	   	
    <item 
    	android:id="@+id/itemQuit" 
    	android:title="@string/menuQuit" 
    	android:icon="@android:drawable/ic_menu_close_clear_cancel" />
</menu>
