<?xml version="1.0" encoding="utf-8"?>

<!-- 
		GMIT - Energy app
		Copyright (C) Carles Sentis 2011 <carlesentis@gmail.com>
		
		GMIT - Energy app is free software: you can
		redistribute it and/or modify it under the terms
		of the GNU General Public License as published by
		the Free Software Foundation, either version 3 of
		the License, or (at your option) any later
		version.
		
		GMIT - Energy app is distributed in the hope that it
		will be useful, but WITHOUT ANY WARRANTY; without
		even the implied warranty of MERCHANTABILITY or
		FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details.
		
		You should have received a copy of the GNU
		General Public License along with this program.
		If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen
  	xmlns:android="http://schemas.android.com/apk/res/android">
  	<PreferenceCategory
  		android:title="@string/GeneralPreferences">
  		
  		<CheckBoxPreference 
  			android:title="@string/Fullscreen"
            android:summary="@string/Fullscreen_summary"
            android:defaultValue="false"
            android:key="ckbfullscreen" />
  		
  	</PreferenceCategory>
  	
  	<PreferenceCategory
  		android:title="@string/GmitEnergy">
  		
  		<Preference 
  			android:title="@string/GmitEnergyTitle"
            android:summary="@string/GmitEnergySummary"/>
  		
  	</PreferenceCategory>
    
</PreferenceScreen>
