<?xml version="1.0" encoding="utf-8"?>

<!-- 
		GMIT - Energy app
		Copyright (C) Carles Sentis 2011 <carlesentis@gmail.com>
		
		GMIT - Energy app is free software: you can
		redistribute it and/or modify it under the terms
		of the GNU General Public License as published by
		the Free Software Foundation, either version 3 of
		the License, or (at your option) any later
		version.
		
		GMIT - Energy app is distributed in the hope that it
		will be useful, but WITHOUT ANY WARRANTY; without
		even the implied warranty of MERCHANTABILITY or
		FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details.
		
		You should have received a copy of the GNU
		General Public License along with this program.
		If not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:orientation="vertical" >
    
    <LinearLayout 
    	android:orientation="vertical" 
    	android:layout_height="fill_parent" 
    	android:layout_width="fill_parent">
         
       	<ImageView 
       		android:src="@drawable/heat_pump_lvl_2"
       		android:layout_width="fill_parent" 
       		android:layout_margin="10dp" 
       		android:layout_height="200dp"/>
 
      	<TextView 
      		android:text="@string/heatpumpLevel2Text" 
      		android:layout_height="wrap_content" 
      		android:layout_width="wrap_content" 
      		android:layout_margin="10dp"/>
      	
      	<LinearLayout 
    		android:orientation="horizontal" 
    		android:layout_width="fill_parent" 
    		android:layout_height="wrap_content">
    		
	    	<LinearLayout 
	    		android:gravity="center_horizontal"
	    		android:orientation="horizontal" 
	    		android:layout_width="fill_parent" 
	    		android:layout_height="wrap_content">
	    		
		      	<Button
		      		android:text="@string/btnHeatOne"
		      		android:id="@+id/btnHeatOne" 
		      		android:layout_width="fill_parent" 
		      		android:layout_weight="1" 
		      		android:layout_height="match_parent" 
		      		android:layout_marginBottom="10dp" 
		      		android:layout_marginLeft="10dp" 
		      		android:layout_marginRight="5dp" 
		      		android:layout_marginTop="10dp"/>
		      		
		      	<Button 
		      		android:text="@string/btnHeatTwo" 
		      		android:id="@+id/btnHeatTwo" 
		      		android:layout_width="fill_parent" 
		      		android:layout_weight="1" 
		      		android:layout_height="match_parent" 
		      		android:layout_marginBottom="10dp" 
		      		android:layout_marginLeft="5dp" 
					android:layout_marginRight="5dp" 
					android:layout_marginTop="10dp"/>
					
				<Button 
		      		android:text="@string/btnHeatThree" 
		      		android:id="@+id/btnHeatThree" 
		      		android:layout_width="fill_parent" 
		      		android:layout_weight="1" 
		      		android:layout_height="match_parent" 
		      		android:layout_marginBottom="10dp" 
		      		android:layout_marginLeft="5dp" 
					android:layout_marginRight="10dp" 
					android:layout_marginTop="10dp"/>
					
	      		</LinearLayout>
	  	</LinearLayout>
        
 	</LinearLayout>
 	
</ScrollView>